crates/aiken-project/src/snapshots/aiken_project__export__tests__basic_export.snap
---
source: crates/aiken-project/src/export.rs
description: "Code:\n\npub fn add(a: Int, b: Int) -> Int {\n    a + b\n}\n"
---
{
  "name": "test_module.add",
  "parameters": [
    {
      "title": "a",
      "schema": {
        "$ref": "#/definitions/Int"
      }
    },
    {
      "title": "b",
      "schema": {
        "$ref": "#/definitions/Int"
      }
    }
  ],
  "compiledCode": "53010000232232337000060026eb4004dd680081",
  "hash": "7a6dd799782f3f4790fa3fd467bb2c7b1cd626393dcbfaaa44e39bb8",
  "definitions": {
    "Int": {
      "dataType": "integer"
    }
  }
}
